--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 # totaal-blockade-van-nederland
 
+'400 vierkante kilometer'
+
+
 https://en.wikipedia.org/wiki/Blockade
 
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
